--- a/house-starter-page.html
+++ b/house-starter-page.html
@@ -38,8 +38,8 @@
         </div>
     </nav>
     <div class="container" id="content_senate">
-        <h1 id="senators">Senators</h1>
-        <p id="senators_id">First convened in 1789, the composition and powers of the Senate are established in Article One of the U.S. Constitution. Each state is represented by two senators, regardless of population, who serve staggered six-year terms. The Senate has several exclusive powers not granted to the House, including consenting to treaties as a precondition to their ratification and consenting to or confirming appointments of Cabinet secretaries, federal judges, other federal executive officials, military officers, regulatory officials, ambassadors, and other federal uniformed officers, as well as trial of federal officials impeached by the House.</p>
+        <h1 id="senators">Congressmen</h1>
+        <p id="senators_id">The major power of the House is to pass federal legislation that affects the entire country, although its bills must also be passed by the Senate and further agreed to by the U.S. President before becoming law (unless both the House and Senate re-pass the legislation with a two-thirds majority in each chamber). The House has some exclusive powers: the power to initiate revenue bills, to impeach officials (impeached officials are subsequently tried in the Senate), and to elect the U.S. President in case there is no majority in the Electoral College. Each U.S. state is represented in the House in proportion to its population as measured in the census, but every state is entitled to at least one representative.</p>
     </div>
     <div class="table-responsive">
         <table class="table table-hover">
@@ -56,112 +56,12 @@
         </table>
     </div>
     <div id="foot_center" class="footer container">
-        (C) 2016 TGIF | All Rights Reserved
+        <p id="footer_text">
+            <p id="footer_text">(C) 2016 TGIF | All Rights Reserved</p>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="js/senate.js"></script>
+    <script type="text/javascript" src="js/house.js"></script>
 </body>
 
-</html><!DOCTYPE html>
-<html lang="en">
-    <head>
-
-    </head>
-    
-    <body>
-         <nav>
-          <div>
-            <div>
-              <a href="#">TGIF</a>
-            </div>
-            <ul >
-              <li><a href="#">Home</a></li>
-              <li >
-                <a href="#">Congress 113</a>
-                <ul >
-                  <li><a href="#">Senate</a></li>
-                  <li><a href="#">House</a></li>
-                </ul>
-              </li>
-            </ul>
-          </div>
-        </nav>        
-            <!--Table container-->
-        <div>     
-            <h2>Congressmen</h2>
-            <p>The major power of the House is to pass federal legislation that affects the entire country, although its bills must also be passed by the Senate and further agreed to by the U.S. President before becoming law (unless both the House and Senate re-pass the legislation with a two-thirds majority in each chamber). The House has some exclusive powers: the power to initiate revenue bills, to impeach officials (impeached officials are subsequently tried in the Senate), and to elect the U.S. President in case there is no majority in the Electoral College.</p>
-            <p>Each U.S. state is represented in the House in proportion to its population as measured in the census, but every state is entitled to at least one representative. </p>
-       	    <table>
-                <thead>
-                    <tr>
-                        <th>Members</th>
-                        <th>First name</th>
-                        <th>Middle name</th>
-                        <th>Last name</th>
-                        <th>Party</th>
-                        <th>Total votes</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>Robert</td>
-                        <td>B.</td>
-                        <td>Aderholt</td>
-                        <td>R</td>
-                        <td>1192</td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>Justin</td>
-                        <td>null</td>
-                        <td>Amash</td>
-                        <td>R</td>
-                        <td>1192</td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>Mark</td>
-                        <td>null</td>
-                        <td>Amodei</td>
-                        <td>R</td>
-                        <td>1192</td>
-                    </tr>
-                    <tr>
-                        <td>4</td>
-                        <td>Alma</td>
-                        <td></td>
-                        <td>Adams</td>
-                        <td>D</td>
-                        <td>48</td>
-                    </tr>
-                    <tr>
-                        <td>5</td>
-                        <td>Spencer</td>
-                        <td>null</td>
-                        <td>Bachus</td>
-                        <td>R</td>
-                        <td>1192</td>
-                    </tr>
-                    <tr>
-                        <td>6</td>
-                        <td>Joe</td>
-                        <td>L.</td>
-                        <td>Barton</td>
-                        <td>R</td>
-                        <td>1192</td>
-                    </tr>
-                    <tr>
-                        <td>7</td>
-                        <td>Xavier</td>
-                        <td>null</td>
-                        <td>Becerra</td>
-                        <td>D</td>
-                        <td>1192</td>
-                    </tr>
-                </tbody>
-            </table>
-	    </div>
-    </body>
 </html>
