--- a/senate-starter-page.html
+++ b/senate-starter-page.html
@@ -56,7 +56,8 @@
         </table>
     </div>
     <div id="foot_center" class="footer container">
-        (C) 2016 TGIF | All Rights Reserved
+        <p id="footer_text">
+            <p id="footer_text">(C) 2016 TGIF | All Rights Reserved</p>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
