--- a/house-attendance-starter-page.html
+++ b/house-attendance-starter-page.html
@@ -11,7 +11,7 @@
 </head>
 
 <body data-congress="house">
-       <div class="container">
+    <div class="container">
         <div class="row">
             <div class="col-sm-4">
                 <a href="home-starter-page.html"><img id="logo" src="css/logo.jpeg" alt="TGIF logo"></a>
@@ -25,7 +25,7 @@
             </div>
         </div>
     </div>
-        <nav class="navbar navbar-inverse">
+    <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
             </div>
@@ -61,34 +61,34 @@
         <p>The Constitution specifies that a majority of members constitutes a quorum to do business in each house. Representatives and senators rarely force the presence of a quorum by demanding quorum calls; thus, in most cases, debates continue even if a majority is not present.</p>
         <p>The Senate uses roll-call votes; a clerk calls out the names of all the senators, each senator stating "aye" or "no" when his or her name is announced. The House reserves roll-call votes for the most formal matters, as a roll-call of all 435 representatives takes quite some time; normally, members vote by electronic device. In the case of a tie, the motion in question fails. In the Senate, the Vice President may (if present) cast the tiebreaking vote.</p>
         <h2>Senate at a glance</h2>
-        <table>
+        <table class="table-responsive table-hover table-condensed">
             <thead>
                 <tr>
                     <th>Party</th>
                     <th>Number of Reps</th>
-                    <th>% Voted with Prty</th>
+                    <th>Voted with Party</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td>Republican</td>
-                    <td>--</td>
-                    <td>--</td>
+                    <td id="repCount">--</td>
+                    <td id="votedWithRep">--</td>
                 </tr>
                 <tr>
                     <td>Democrat</td>
-                    <td>--</td>
-                    <td>--</td>
+                    <td id="demCount">--</td>
+                    <td id="votedWithDem">--</td>
                 </tr>
                 <tr>
                     <td>Independent</td>
-                    <td>--</td>
-                    <td>--</td>
+                    <td id="inCount">--</td>
+                    <td>-</td>
                 </tr>
             </tbody>
         </table>
         <h2>Least Engaged (Bottom 10% Attendance)</h2>
-        <table>
+        <table class="table-responsive table-hover table-condensed">
             <thead>
                 <tr>
                     <th>Name</th>
@@ -130,7 +130,7 @@
             </tbody>
         </table>
         <h2>Most Engaged (Top 10% Attendance)</h2>
-        <table>
+        <table class="table-responsive table-hover table-condensed">
             <thead>
                 <tr>
                     <th>Name</th>
