--- a/house-party-loyalty-starter-page.html
+++ b/house-party-loyalty-starter-page.html
@@ -11,7 +11,7 @@
 </head>
 
 <body data-congress="house">
-      <div class="container">
+    <div class="container">
         <div class="row">
             <div class="col-sm-4">
                 <a href="home-starter-page.html"><img id="logo" src="css/logo.jpeg" alt="TGIF logo"></a>
@@ -25,7 +25,7 @@
             </div>
         </div>
     </div>
-        <nav class="navbar navbar-inverse">
+    <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
             </div>
@@ -61,34 +61,34 @@
         <h2>Party Loyalty</h2>
         <p>Those who consider themselves to be strong partisans, strong Democrats and strong Republicans respectively, tend to be the most faithful in voting for their party's nominee for office and legislation that backs their party's agenda. </p>
         <h2>Senate at a glance</h2>
-        <table>
+        <table class="table-responsive table-hover table-condensed">
             <thead>
                 <tr>
                     <th>Party</th>
                     <th>Number of Reps</th>
-                    <th>% Voted with Prty</th>
+                    <th>Voted with Party</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td>Republican</td>
-                    <td>--</td>
-                    <td>--</td>
+                    <td id="repCount">--</td>
+                    <td id="votedWithRep">--</td>
                 </tr>
                 <tr>
                     <td>Democrat</td>
-                    <td>--</td>
-                    <td>--</td>
+                    <td id="demCount">--</td>
+                    <td id="votedWithDem">--</td>
                 </tr>
                 <tr>
                     <td>Independent</td>
-                    <td>--</td>
-                    <td>--</td>
+                    <td id="inCount">--</td>
+                    <td>-</td>
                 </tr>
             </tbody>
         </table>
         <h2>Least Loyal (Bottom 10% of Party)</h2>
-        <table>
+        <table class="table-responsive table-hover table-condensed">
             <thead>
                 <tr>
                     <th>Name</th>
@@ -128,54 +128,55 @@
                     <td>--</td>
                 </tr>
             </tbody>
-        </table>
-        <h2>Most Loyal (Top 10% of Party)</h2>
-        <table>
-            <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Number Party Votes</th>
-                    <th>% Party Votes</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>--</td>
-                    <td>--</td>
-                    <td>--</td>
-                </tr>
-                <tr>
-                    <td>--</td>
-                    <td>--</td>
-                    <td>--</td>
-                </tr>
-                <tr>
-                    <td>--</td>
-                    <td>--</td>
-                    <td>--</td>
-                </tr>
-                <tr>
-                    <td>--</td>
-                    <td>--</td>
-                    <td>--</td>
-                </tr>
-                <tr>
-                    <td>--</td>
-                    <td>--</td>
-                    <td>--</td>
-                </tr>
-                <tr>
-                    <td>--</td>
-                    <td>--</td>
-                    <td>--</td>
-                </tr>
-                <tr>
-                    <td>--</td>
-                    <td>--</td>
-                    <td>--</td>
-                </tr>
-            </tbody>
-        </table>
+            <table class="table-responsive table-hover table-condensed">
+                <h2>Most Loyal (Top 10% of Party)</h2>
+                <table>
+                    <table class="table-responsive table-hover table-condensed">
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>Number Party Votes</th>
+                                <th>% Party Votes</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>--</td>
+                                <td>--</td>
+                                <td>--</td>
+                            </tr>
+                            <tr>
+                                <td>--</td>
+                                <td>--</td>
+                                <td>--</td>
+                            </tr>
+                            <tr>
+                                <td>--</td>
+                                <td>--</td>
+                                <td>--</td>
+                            </tr>
+                            <tr>
+                                <td>--</td>
+                                <td>--</td>
+                                <td>--</td>
+                            </tr>
+                            <tr>
+                                <td>--</td>
+                                <td>--</td>
+                                <td>--</td>
+                            </tr>
+                            <tr>
+                                <td>--</td>
+                                <td>--</td>
+                                <td>--</td>
+                            </tr>
+                            <tr>
+                                <td>--</td>
+                                <td>--</td>
+                                <td>--</td>
+                            </tr>
+                        </tbody>
+                    </table>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
